src/components/Product/Product.module.css
.navbar {
  width: 100%;
  max-width: 750px;
  display: flex;
  align-items: center;
  padding: 10px 50px;
  margin-left: auto;
  margin-right: auto;
  background-color: transparent;
  border-bottom: 1px solid #ddd;
  overflow-x: auto;
  white-space: nowrap;
  scroll-behavior: smooth;
}

.navbar::-webkit-scrollbar {
  display: none; /* Hide the scrollbar */
}

.navbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.menu {
  min-width: 700px;
  display: flex;
  justify-content: space-between;
  list-style: none;
}

.menu li a {
  text-decoration: none;
  color: #333;
  font-size: 16px;
  font-weight: 500;
  transition: color 0.3s ease;
}

.menu li a:hover,
.menu li a.active {
  color: #5bc0de;
}

.wishlistHero {
  position: relative;
  width: 100%;
  height: 215px;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.imageContainer {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 215px;
  max-height: 215px;
  overflow: hidden;
}

.imageContainer img {
  width: 100%;
  height: auto;
  object-fit: contain;
}

.overlay {
  position: absolute;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: white;
  background: rgba(0, 0, 0, 0.55);
}

.overlay h3 {
  font-size: 24px;
  font-weight: bold;
}

.overlay p {
  font-size: 16px;
}

.filterContainer {
  display: flex;
  align-items: center;
  justify-content: right;
  padding: 20px;
  background-color: white;
  margin: 20px 0;
}

.sortDropdown {
  padding: 8px 12px;
  border: 1px solid #ddd;
  border-radius: 4px;
  font-size: 14px;
}

.cardsContainer {
  max-width: 1160px;
  margin: 20px auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.imgCard {
  width: 270px;
  margin: 10px;
  overflow: hidden;
}

.tagContainer {
  position: relative;
  width: 100%;
  height: 0px;
}

.tag {
  position: relative;
  display: flex;
  justify-self: right;
  top: 20px;
  left: -20px;
  font-size: 14px;
  font-weight: 400;
  z-index: 20;
  padding: 8px;
  border-radius: 50%;
  color: white;
}

.imageWrapper {
  position: relative;
  width: 100%;
  height: 345px;
  overflow: hidden;
}

.imageDefault,
.imageHover {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: opacity 0.5s ease-in-out;
}

.imageDefault {
  position: relative;
  z-index: 1;
  opacity: 1;
}

.imageHover {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  opacity: 0;
}

.imageWrapper:hover .imageDefault {
  opacity: 0;
}

.imageWrapper:hover .imageHover {
  opacity: 1;
}

.cardOverlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  z-index: 6;
}

.overlayContent {
  z-index: 7;
}

.imageWrapper:hover .cardOverlay {
  opacity: 1;
}

.topLeftButtons {
  position: absolute;
  top: 10px;
  left: 10px;
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.icon {
  font-size: 20px;
}

.smallBtn {
  padding: 5px;
  border: none;
  background: transparent;
  color: white;
  font-size: 12px;
  border-radius: 4px;
  cursor: pointer;
  transition: background 0.3s ease-in-out;
  opacity: 0;
  transform: translateX(-20px);
}

.imageWrapper:hover .btn1 {
  animation: slideInLeft 0.4s forwards 0.2s;
  border: none;
}

.btn1:hover,
.btn1:focus {
  background: transparent !important;
  border: none !important;
  outline: none !important;
}

.imageWrapper:hover .btn2 {
  animation: slideInLeft 0.4s forwards 0.4s;
}

.btn2:hover,
.btn2:focus {
  background: transparent !important;
  border: none !important;
  outline: none !important;
}

@keyframes slideInLeft {
  from {
    opacity: 0;
    transform: translateX(-20px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

.centerButtons {
  top: 50%;
  margin: auto;
  flex-direction: column;
  transform: translateY(-20px);
  justify-content: center;
  z-index: 3;
  transition: 0.5s ease 0s;
  display: flex;
  flex-direction: column;
  gap: 10px;
  text-align: center;
  align-items: center;
}

.btn {
  position: relative;
  height: 40px;
  width: 136px;
  padding: 8px 16px;
  border: 2px solid white;
  background: white;
  color: black;
  font-size: 14px;
  font-weight: 400;
  border-radius: 20px;
  cursor: pointer;
  overflow: hidden;
  transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
}

.btn:hover {
  background: white;
  color: black;
}

.lightBlueBtn {
  height: 40px;
  width: 136px;
  padding: 8px 16px;
  border: 2px solid transparent;
  font-size: 14px;
  font-weight: 400;
  border-radius: 20px;
  cursor: pointer;
  transition: background 0.3s ease-in-out;
  background: lightblue;
  color: black;
  border-color: lightblue;
}

.imageWrapper:hover .footerText {
  animation: slideInTop 0.5s forwards 0.5s;
}

.textContainer {
  padding: 10px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items:flex-start;
  justify-content: flex-start;
  width: 100%;
}

.cardTitle {
  font-family: Poppins, sans-serif;
  font-weight: bold;
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  color: rgb(34, 34, 34);
  text-align: left;
  margin: 0;
}

.cardPrice {
  box-sizing: border-box;
  display: block;
  height: 23px;
  width: 100%;
  font-family: Poppins;
  font-size: 14px;
  font-stretch: 100%;
  font-weight: 400;
  color: rgb(105, 105, 105);
}

.smallBtn:hover {
  background: white;
  color: black;
}

.imageWrapper:hover .centerButtons {
  animation: slideInTop 0.4s forwards 0.2s;
}

@keyframes slideInTop {
  from {
    opacity: 0;
    transform: translateY(-20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.footerText {
  position: absolute;
  bottom: 10px;
  color: white;
  font-size: 12px;
  font-weight: bold;
  text-align: center;
  justify-self: center;
  width: 100%;
}

.addToCartBtn {
  width: 140px;
  padding: 10px 20px;
  background: #56cfe1;
  color: white;
  border: none;
  border-radius: 20px;
  cursor: pointer;
  font-weight: 600;
  transition: background 0.3s ease-in-out;
  animation: shake 5s infinite linear;
}

@keyframes shake {
  20%,
  100% {
    transform: translateX(0);
  }
  2%,
  6%,
  10%,
  14%,
  18% {
    transform: translateX(-10px);
  }
  4%,
  8%,
  12%,
  16% {
    transform: translateX(10px);
  }
}

.addToCartBtn:hover {
  background: #43bacc;
}

.buyNowBtn {
  width: 140px;
  margin-top: 5px;
  padding: 10px 20px;
  background: rgb(34, 34, 34);
  color: white;
  border: none;
  border-radius: 20px;
  cursor: pointer;
  font-weight: 600;
  transition: background 0.3s ease-in-out;
}

.buyNowBtn:hover {
  background: #43bacc;
}

.popup {
  position: fixed;
  background-color: rgba(0, 0, 0, 0.8);
  color: white;
  padding: 8px 16px;
  border-radius: 4px;
  top: 30px;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 10;
  font-size: 0.8rem;
}

.navButtonLeft {
  position: absolute;
  left: 0px;
  background-color: #f0f0f0;
  border: none;
  padding: 8px 12px;
  cursor: pointer;
  font-size: 16px;
}

.navButtonRight {
  position: absolute;
  right: 0px;
  background-color: #f0f0f0;
  border: none;
  padding: 8px 12px;
  cursor: pointer;
  font-size: 16px;
}



@media only screen and (max-width: 765px) {
  .navbar {
    overflow-x: hidden;
  }
  .navButtonLeft {
    display: none;
  }
  .navButtonRight {
    display: none;
  }
  .container {
    margin: 30px auto;
  }

  .titleContainer {
    margin: 2cqmin auto;
  }

  .imgCard {
    height: auto;
    width: 150px;
  }

  .cardsContainer {
    margin-top: 20px;
  }

  .tag {
    top: 5px;
    left: -5px;
    font-size: 10px;
    font-weight: 200;
    padding: 4px;
  }

  .imageWrapper {
    width: 150px;
    height: 192px;
  }

  /* Center Buttons */
  .centerButtons {
    gap: 5px;
    top: 80%;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    align-items: end;
  }

  .addToCartBtn {
    width: 80px;
    margin-top: 5px;
    padding: 5px;
    font-size: 10px;
    font-weight: 400;
  }

  .buyNowBtn {
    width: 80px;
    margin-top: 5px;
    padding: 5px;
    font-size: 10px;
    font-weight: 400;
  }

  /* Footer Text */
  .footerText {
    bottom: 5px;
    font-size: 10px;
    font-weight: 200;
  }

  .textContainer {
    height: auto;
    width: 150px;
  }


  .cardTitle {
    font-size: 10px;
    font-weight: 500;

  }

  .cardPrice {
    font-size: 10px;
    font-weight: 400;
  }
}

